--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li><a class="nav-link scrollto active" href="#hero">HOME</a></li>
           <li><a class="nav-link scrollto" href="#infratructure">INFRASTRUCTURE</a></li>
           <li><a class="nav-link scrollto" href="#products">PRODUCTS</a></li>
-          <li><a class="nav-link   scrollto" href="#why-us">WHY US?</a></li>
+          <li><a class="nav-link scrollto" href="#why-us">WHY US?</a></li>
           <li><a class="nav-link scrollto" href="#footer">CONTACT</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -60,12 +60,14 @@
     <div class="container">
       <div class="row">
         <div
-          class="col-lg-6 col-md-6 col-sm-6 col-xm-6 d-flex flex-column justify-content-lg-start pt-4 pt-lg-0 order-2 order-lg-1"
+          class="col-lg-3 col-md-4 col-sm-6 col-xm-6 d-flex flex-column justify-content-lg-start pt-4 pt-lg-0 order-2 order-lg-1"
           data-aos="fade-up" data-aos-delay="200">
-          <h1>Elevating Fashion,</h1>
-          <h1>Enriching Lives!</h1>
+          <h1>Elevating </h1>
+          <h1>Fashion,</h1>
+          <h1>Enriching </h1>
+          <h1>Lives!</h1>
         </div>
-        <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
+        <!-- <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200"> -->
         </div>
       </div>
     </div>
@@ -418,8 +420,8 @@
               SF N0 321/16A1B TIRUPPUR POLLACHI HIGHWAY <br>
               COIMBATORE TAMIL NADU INDIA - 642202<br>
               MR.PRADEEPKANNAN <br>
-              <strong>Phone: </strong>+91 98424 04599 <br>
-              <strong>Email: </strong>PRADEEP@REMMYTEXLES.IN<br>
+              <strong>Phone: </strong><a href="telto:+919842404599">+91 98424 04599</a><br>
+              <strong>Email: </strong><a href="mailto:pradeep@remmytextiles.in">pradeep@remmytextiles.in</a><br>
             </p>
             <br>
 
@@ -429,8 +431,8 @@
               1100 E ORANGETHORPE AVE 200 F <br>
               ANAHEIM CA 92801 USA<br>
               MR.HARISH <br>
-              <strong>Phone: </strong>+1 (310) 6989 111 <br>
-              <strong>Email: </strong>HARISH@REMMYTEXLES.IN<br>
+              <strong>Phone: </strong><a href="telto:+13106989111">+1 (310) 6989 111</a><br>
+              <strong>Email: </strong><a href="mailto:hareesh@remmytextiles.in" >hareesh@remmytextiles.in</a><br>
             </p>
           </div>
 
