--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Remmy Textiles</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Remmy Textile - Elivating Fashion, Enriching Lives!</title>
+  <meta content="Established in 2019, Remmy Textiles is a third-generation family-based company. We are an emerging manufacturer and exporter of knitted garments with an integrated factory producing over 12 million pcs/year. Our core competency lies in understanding our customers' buying preferences and delivering consistent, high-quality products that meet international compliance standards. With a keen eye on the latest fashion trends, we are committed to providing exceptional products that exceed our customers' expectations." name="description">
+  <meta content="textiles textile-manufacturing export" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -67,7 +67,6 @@
           <h1>Enriching </h1>
           <h1>Lives!</h1>
         </div>
-        <!-- <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200"> -->
         </div>
       </div>
     </div>
@@ -79,10 +78,6 @@
     <!-- ======= About Us Section ======= -->
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
-
-        <!-- <div class="section-title">
-          <h2>About Us</h2>
-        </div> -->
 
         <div class="row content justify-content-end">
           <div class="col-lg-8 pt-4 pt-lg-0">
@@ -163,6 +158,7 @@
                 <a data-bs-toggle="collapse" data-bs-target="#accordion-list-1"> SPINNING MILL <i
                     class="bx bx-plus icon-show"></i><i class="bx bx-minus icon-close"></i></a>
                 <div id="accordion-list-1" class="collapse show" data-bs-parent="#accordion-list1">
+                  <img src="assets/img/infra/spinning-mill.jpg" class="img-fluid" alt="Spinning Mill">
                   <p>
                     State-of-the-art spinning mill with 18,000 spindles. Producing 4200 metric tons of cotton yarn
                     annually (10s to 40s counts). Highly automated systems ensure top-quality yarn meeting high
@@ -176,6 +172,7 @@
                 <a data-bs-toggle="collapse" data-bs-target="#accordion-list-2" class="collapsed"> KNITTING DIVISION <i
                     class="bx bx-plus icon-show"></i><i class="bx bx-minus icon-close"></i></a>
                 <div id="accordion-list-2" class="collapse" data-bs-parent="#accordion-list1">
+                  <img src="assets/img/infra/knitting-division.jpg" class="img-fluid" alt="Knitting Division">
                   <p>
                     Our facility produces single, spandex, double jersey, and fleece grey fabrics. Capacity: 2500 metric
                     tons/year. Ensuring high-quality output, we collaborate with long-standing partners for track
@@ -189,6 +186,7 @@
                 <a data-bs-toggle="collapse" class="collapsed" data-bs-target="#accordion-list-3"> PROCESSING MILL <i
                     class="bx bx-plus icon-show"></i><i class="bx bx-minus icon-close"></i></a>
                 <div id="accordion-list-3" class="collapse" data-bs-parent="#accordion-list1">
+                  <img src="assets/img/infra/processing-mill.jpg" class="img-fluid" alt="Processing Mill">
                   <p>
                     3500 tons/year finished fabrics. Turkey-made DMS Dilmenler machinery for dyeing, drying, stentering,
                     and compacting. Vessels 25-2000 kg, high/low-temp capabilities. Datacolor's Match Textile for
@@ -202,6 +200,7 @@
                 <a data-bs-toggle="collapse" data-bs-target="#accordion-list-4" class="collapsed"> PRINTING <i
                     class="bx bx-plus icon-show"></i><i class="bx bx-minus icon-close"></i></a>
                 <div id="accordion-list-4" class="collapse" data-bs-parent="#accordion-list1">
+                  <img src="assets/img/infra/printing.jpg" class="img-fluid" alt="Printing">
                   <p>
                     SEDEX approved printing. 20k-30k units/day. Conventional, manual, MHM Automatic (14-16 colors).
                     In-house design team for fast developments. Top-notch quality, efficient production, reliable
@@ -215,6 +214,7 @@
                 <a data-bs-toggle="collapse" data-bs-target="#accordion-list-5" class="collapsed"> EMBROIDERY <i
                     class="bx bx-plus icon-show"></i><i class="bx bx-minus icon-close"></i></a>
                 <div id="accordion-list-5" class="collapse" data-bs-parent="#accordion-list1">
+                  <img src="assets/img/infra/embroidery.jpg" class="img-fluid" alt="Embroidery">
                   <p>
                     Barudan's Japanese machines offer precise embroidery. 15k units/day production capacity. Trust us
                     for quality sequence embroidery, stone works, stud work, and embellishments. Elevate your brand now!
@@ -250,10 +250,8 @@
           </ul>
 
         </div>
-        
 
         </div>
-
         
         <div id="products-carousel" class="owl-carousel">
 
@@ -354,6 +352,7 @@
                 <a data-bs-toggle="collapse" data-bs-target="#accordion-list-7" class="collapsed"> QUALITY ASSURANCE <i
                     class="bx bx-plus icon-show"></i><i class="bx bx-minus icon-close"></i></a>
                 <div id="accordion-list-7" class="collapse" data-bs-parent="#accordion-list2">
+                  <img src="assets/img/infra/quality-assurance.jpg" class="img-fluid" alt="Quality Assurance">
                   <p>
                     Our well-organized Quality Assurance team conducts continuous online checks from incoming fabric to
                     finished garments, utilizing the latest technologies. This ensures flawless garment quality.
@@ -366,6 +365,7 @@
                 <a data-bs-toggle="collapse" data-bs-target="#accordion-list-8" class="collapsed"> TESTING CAPABILITY <i
                     class="bx bx-plus icon-show"></i><i class="bx bx-minus icon-close"></i></a>
                 <div id="accordion-list-8" class="collapse" data-bs-parent="#accordion-list2">
+                  <img src="assets/img/infra/testing-capability.jpg" class="img-fluid" alt="Testing Capability">
                   <p>
                     Remmy Textiles ensures top-notch quality with comprehensive testing capabilities, including
                     Dimensional Stability to Washing for both fabric and garments, Fabric Weight (GSM), Spirality,
@@ -381,6 +381,7 @@
                   COMMUNITIES, ENSURING SUSTAINABILITY <i class="bx bx-plus icon-show"></i><i
                     class="bx bx-minus icon-close"></i></a>
                 <div id="accordion-list-9" class="collapse" data-bs-parent="#accordion-list2">
+                  <img src="assets/img/infra/sustainability.jpg" class="img-fluid" alt="Sustainability">
                   <p>
                     Remmy Textiles actively promotes well-being and sustainability through CSR. Vaccination drive
                     (3000), school & healthcare donations uplift communities. Embracing eco-friendly practices: wind
