--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Remmy Textile - Elivating Fashion, Enriching Lives!</title>
-  <meta content="Established in 2019, Remmy Textiles is a third-generation family-based company. We are an emerging manufacturer and exporter of knitted garments with an integrated factory producing over 12 million pcs/year. Our core competency lies in understanding our customers' buying preferences and delivering consistent, high-quality products that meet international compliance standards. With a keen eye on the latest fashion trends, we are committed to providing exceptional products that exceed our customers' expectations." name="description">
+  <meta
+    content="Established in 2019, Remmy Textiles is a third-generation family-based company. We are an emerging manufacturer and exporter of knitted garments with an integrated factory producing over 12 million pcs/year. Our core competency lies in understanding our customers' buying preferences and delivering consistent, high-quality products that meet international compliance standards. With a keen eye on the latest fashion trends, we are committed to providing exceptional products that exceed our customers' expectations."
+    name="description">
   <meta content="textiles textile-manufacturing export" name="keywords">
 
   <!-- Favicons -->
@@ -26,7 +28,9 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -67,8 +71,8 @@
           <h1>Enriching </h1>
           <h1>Lives!</h1>
         </div>
-        </div>
       </div>
+    </div>
     </div>
 
   </section><!-- End Hero -->
@@ -158,7 +162,10 @@
                 <a data-bs-toggle="collapse" data-bs-target="#accordion-list-1"> SPINNING MILL <i
                     class="bx bx-plus icon-show"></i><i class="bx bx-minus icon-close"></i></a>
                 <div id="accordion-list-1" class="collapse show" data-bs-parent="#accordion-list1">
-                  <img src="assets/img/infra/spinning-mill.jpg" class="img-fluid" alt="Spinning Mill">
+                  <div class="d-flex justify-content-center">
+                    <img src="assets/img/infra/spinning-mill.jpg" class="img-fluid" alt="Spinning Mill">
+                  </div>
+
                   <p>
                     State-of-the-art spinning mill with 18,000 spindles. Producing 4200 metric tons of cotton yarn
                     annually (10s to 40s counts). Highly automated systems ensure top-quality yarn meeting high
@@ -172,7 +179,9 @@
                 <a data-bs-toggle="collapse" data-bs-target="#accordion-list-2" class="collapsed"> KNITTING DIVISION <i
                     class="bx bx-plus icon-show"></i><i class="bx bx-minus icon-close"></i></a>
                 <div id="accordion-list-2" class="collapse" data-bs-parent="#accordion-list1">
-                  <img src="assets/img/infra/knitting-division.jpg" class="img-fluid" alt="Knitting Division">
+                  <div class="d-flex justify-content-center">
+                    <img src="assets/img/infra/knitting-division.jpg" class="img-fluid" alt="Knitting Division">
+                  </div>
                   <p>
                     Our facility produces single, spandex, double jersey, and fleece grey fabrics. Capacity: 2500 metric
                     tons/year. Ensuring high-quality output, we collaborate with long-standing partners for track
@@ -186,7 +195,9 @@
                 <a data-bs-toggle="collapse" class="collapsed" data-bs-target="#accordion-list-3"> PROCESSING MILL <i
                     class="bx bx-plus icon-show"></i><i class="bx bx-minus icon-close"></i></a>
                 <div id="accordion-list-3" class="collapse" data-bs-parent="#accordion-list1">
-                  <img src="assets/img/infra/processing-mill.jpg" class="img-fluid" alt="Processing Mill">
+                  <div class="d-flex justify-content-center">
+                    <img src="assets/img/infra/processing-mill.jpg" class="img-fluid" alt="Processing Mill">
+                  </div>
                   <p>
                     3500 tons/year finished fabrics. Turkey-made DMS Dilmenler machinery for dyeing, drying, stentering,
                     and compacting. Vessels 25-2000 kg, high/low-temp capabilities. Datacolor's Match Textile for
@@ -200,7 +211,9 @@
                 <a data-bs-toggle="collapse" data-bs-target="#accordion-list-4" class="collapsed"> PRINTING <i
                     class="bx bx-plus icon-show"></i><i class="bx bx-minus icon-close"></i></a>
                 <div id="accordion-list-4" class="collapse" data-bs-parent="#accordion-list1">
-                  <img src="assets/img/infra/printing.jpg" class="img-fluid" alt="Printing">
+                  <div class="d-flex justify-content-center">
+                    <img src="assets/img/infra/printing.jpg" class="img-fluid" alt="Printing">
+                  </div>  
                   <p>
                     SEDEX approved printing. 20k-30k units/day. Conventional, manual, MHM Automatic (14-16 colors).
                     In-house design team for fast developments. Top-notch quality, efficient production, reliable
@@ -214,7 +227,9 @@
                 <a data-bs-toggle="collapse" data-bs-target="#accordion-list-5" class="collapsed"> EMBROIDERY <i
                     class="bx bx-plus icon-show"></i><i class="bx bx-minus icon-close"></i></a>
                 <div id="accordion-list-5" class="collapse" data-bs-parent="#accordion-list1">
-                  <img src="assets/img/infra/embroidery.jpg" class="img-fluid" alt="Embroidery">
+                  <div class="d-flex justify-content-center">
+                    <img src="assets/img/infra/embroidery.jpg" class="img-fluid" alt="Embroidery">
+                  </div>
                   <p>
                     Barudan's Japanese machines offer precise embroidery. 15k units/day production capacity. Trust us
                     for quality sequence embroidery, stone works, stud work, and embellishments. Elevate your brand now!
@@ -241,8 +256,8 @@
           <h2>PRODUCTS</h2>
         </div>
         <div class="container">
-            <ul id="owl-filter-bar" class="owl-filter-bar aos-init aos-animate d-flex justify-content-center" data-aos="fade-up"
-            data-aos-delay="100">
+          <ul id="owl-filter-bar" class="owl-filter-bar aos-init aos-animate d-flex justify-content-center"
+            data-aos="fade-up" data-aos-delay="100">
             <li data-owl-filter=".men" class="item">Men</li>
             <li data-owl-filter=".women" class="item">Women</li>
             <li data-owl-filter=".boys" class="item">Boys</li>
@@ -251,37 +266,37 @@
 
         </div>
 
-        </div>
-        
-        <div id="products-carousel" class="owl-carousel">
+      </div>
 
-          <div class="item men"><img src="assets/img/products/men-1.png" class="img-fluid" alt=""></div>
-          <div class="item men"><img src="assets/img/products/men-2.png" class="img-fluid" alt=""></div>
-          <div class="item men"><img src="assets/img/products/men-3.png" class="img-fluid" alt=""></div>
-          <div class="item men"><img src="assets/img/products/men-4.png" class="img-fluid" alt=""></div>
-          <div class="item men"><img src="assets/img/products/men-5.png" class="img-fluid" alt=""></div>
-          <div class="item men"><img src="assets/img/products/men-6.png" class="img-fluid" alt=""></div>
-          <div class="item women"><img src="assets/img/products/women-1.png" class="img-fluid" alt=""></div>
-          <div class="item women"><img src="assets/img/products/women-2.png" class="img-fluid" alt=""></div>
-          <div class="item women"><img src="assets/img/products/women-3.png" class="img-fluid" alt=""></div>
-          <div class="item women"><img src="assets/img/products/women-4.png" class="img-fluid" alt=""></div>
-          <div class="item women"><img src="assets/img/products/women-5.png" class="img-fluid" alt=""></div>
-          <div class="item women"><img src="assets/img/products/women-6.png" class="img-fluid" alt=""></div>
-          <div class="item women"><img src="assets/img/products/women-7.png" class="img-fluid" alt=""></div>
-          <div class="item boys"><img src="assets/img/products/boys-1.png" class="img-fluid" alt=""></div>
-          <div class="item boys"><img src="assets/img/products/boys-2.png" class="img-fluid" alt=""></div>
-          <div class="item boys"><img src="assets/img/products/boys-3.png" class="img-fluid" alt=""></div>
-          <div class="item boys"><img src="assets/img/products/boys-4.png" class="img-fluid" alt=""></div>
-          <div class="item boys"><img src="assets/img/products/boys-5.png" class="img-fluid" alt=""></div>
-          <div class="item boys"><img src="assets/img/products/boys-6.png" class="img-fluid" alt=""></div>
-          <div class="item girls"><img src="assets/img/products/girls-1.png" class="img-fluid" alt=""></div>
-          <div class="item girls"><img src="assets/img/products/girls-2.png" class="img-fluid" alt=""></div>
-          <div class="item girls"><img src="assets/img/products/girls-3.png" class="img-fluid" alt=""></div>
-          <div class="item girls"><img src="assets/img/products/girls-4.png" class="img-fluid" alt=""></div>
-          <div class="item girls"><img src="assets/img/products/girls-5.png" class="img-fluid" alt=""></div>
-          <div class="item girls"><img src="assets/img/products/girls-6.png" class="img-fluid" alt=""></div>
+      <div id="products-carousel" class="owl-carousel">
 
-        </div>
+        <div class="item men"><img src="assets/img/products/men-1.png" class="img-fluid" alt=""></div>
+        <div class="item men"><img src="assets/img/products/men-2.png" class="img-fluid" alt=""></div>
+        <div class="item men"><img src="assets/img/products/men-3.png" class="img-fluid" alt=""></div>
+        <div class="item men"><img src="assets/img/products/men-4.png" class="img-fluid" alt=""></div>
+        <div class="item men"><img src="assets/img/products/men-5.png" class="img-fluid" alt=""></div>
+        <div class="item men"><img src="assets/img/products/men-6.png" class="img-fluid" alt=""></div>
+        <div class="item women"><img src="assets/img/products/women-1.png" class="img-fluid" alt=""></div>
+        <div class="item women"><img src="assets/img/products/women-2.png" class="img-fluid" alt=""></div>
+        <div class="item women"><img src="assets/img/products/women-3.png" class="img-fluid" alt=""></div>
+        <div class="item women"><img src="assets/img/products/women-4.png" class="img-fluid" alt=""></div>
+        <div class="item women"><img src="assets/img/products/women-5.png" class="img-fluid" alt=""></div>
+        <div class="item women"><img src="assets/img/products/women-6.png" class="img-fluid" alt=""></div>
+        <div class="item women"><img src="assets/img/products/women-7.png" class="img-fluid" alt=""></div>
+        <div class="item boys"><img src="assets/img/products/boys-1.png" class="img-fluid" alt=""></div>
+        <div class="item boys"><img src="assets/img/products/boys-2.png" class="img-fluid" alt=""></div>
+        <div class="item boys"><img src="assets/img/products/boys-3.png" class="img-fluid" alt=""></div>
+        <div class="item boys"><img src="assets/img/products/boys-4.png" class="img-fluid" alt=""></div>
+        <div class="item boys"><img src="assets/img/products/boys-5.png" class="img-fluid" alt=""></div>
+        <div class="item boys"><img src="assets/img/products/boys-6.png" class="img-fluid" alt=""></div>
+        <div class="item girls"><img src="assets/img/products/girls-1.png" class="img-fluid" alt=""></div>
+        <div class="item girls"><img src="assets/img/products/girls-2.png" class="img-fluid" alt=""></div>
+        <div class="item girls"><img src="assets/img/products/girls-3.png" class="img-fluid" alt=""></div>
+        <div class="item girls"><img src="assets/img/products/girls-4.png" class="img-fluid" alt=""></div>
+        <div class="item girls"><img src="assets/img/products/girls-5.png" class="img-fluid" alt=""></div>
+        <div class="item girls"><img src="assets/img/products/girls-6.png" class="img-fluid" alt=""></div>
+
+      </div>
     </section><!-- End Products Section -->
 
     <!-- ======= Trusted Partners Section ======= -->
@@ -352,7 +367,9 @@
                 <a data-bs-toggle="collapse" data-bs-target="#accordion-list-7" class="collapsed"> QUALITY ASSURANCE <i
                     class="bx bx-plus icon-show"></i><i class="bx bx-minus icon-close"></i></a>
                 <div id="accordion-list-7" class="collapse" data-bs-parent="#accordion-list2">
-                  <img src="assets/img/infra/quality-assurance.jpg" class="img-fluid" alt="Quality Assurance">
+                  <div class="d-flex justify-content-center">
+                    <img src="assets/img/infra/quality-assurance.jpg" class="img-fluid" alt="Quality Assurance">
+                  </div>
                   <p>
                     Our well-organized Quality Assurance team conducts continuous online checks from incoming fabric to
                     finished garments, utilizing the latest technologies. This ensures flawless garment quality.
@@ -365,7 +382,9 @@
                 <a data-bs-toggle="collapse" data-bs-target="#accordion-list-8" class="collapsed"> TESTING CAPABILITY <i
                     class="bx bx-plus icon-show"></i><i class="bx bx-minus icon-close"></i></a>
                 <div id="accordion-list-8" class="collapse" data-bs-parent="#accordion-list2">
-                  <img src="assets/img/infra/testing-capability.jpg" class="img-fluid" alt="Testing Capability">
+                  <div class="d-flex justify-content-center">
+                    <img src="assets/img/infra/testing-capability.jpg" class="img-fluid" alt="Testing Capability">
+                  </div>
                   <p>
                     Remmy Textiles ensures top-notch quality with comprehensive testing capabilities, including
                     Dimensional Stability to Washing for both fabric and garments, Fabric Weight (GSM), Spirality,
@@ -381,7 +400,9 @@
                   COMMUNITIES, ENSURING SUSTAINABILITY <i class="bx bx-plus icon-show"></i><i
                     class="bx bx-minus icon-close"></i></a>
                 <div id="accordion-list-9" class="collapse" data-bs-parent="#accordion-list2">
-                  <img src="assets/img/infra/sustainability.jpg" class="img-fluid" alt="Sustainability">
+                  <div class="d-flex justify-content-center">
+                    <img src="assets/img/infra/sustainability.jpg" class="img-fluid" alt="Sustainability">
+                  </div>
                   <p>
                     Remmy Textiles actively promotes well-being and sustainability through CSR. Vaccination drive
                     (3000), school & healthcare donations uplift communities. Embracing eco-friendly practices: wind
@@ -433,7 +454,7 @@
               ANAHEIM CA 92801 USA<br>
               MR.HARISH <br>
               <strong>Phone: </strong><a href="telto:+13106989111">+1 (310) 6989 111</a><br>
-              <strong>Email: </strong><a href="mailto:hareesh@remmytextiles.in" >hareesh@remmytextiles.in</a><br>
+              <strong>Email: </strong><a href="mailto:hareesh@remmytextiles.in">hareesh@remmytextiles.in</a><br>
             </p>
           </div>
 
