--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <div id="accordion-list-4" class="collapse" data-bs-parent="#accordion-list1">
                   <div class="d-flex justify-content-center">
                     <img src="assets/img/infra/printing.jpg" class="img-fluid" alt="Printing">
-                  </div>  
+                  </div>
                   <p>
                     SEDEX approved printing. 20k-30k units/day. Conventional, manual, MHM Automatic (14-16 colors).
                     In-house design team for fast developments. Top-notch quality, efficient production, reliable
@@ -237,6 +237,20 @@
                 </div>
               </li>
               <hr>
+
+              <!-- <li>
+                <a data-bs-toggle="collapse" data-bs-target="#accordion-list-5" class="collapsed"> TODO <i
+                    class="bx bx-plus icon-show"></i><i class="bx bx-minus icon-close"></i></a>
+                <div id="accordion-list-5" class="collapse" data-bs-parent="#accordion-list1">
+                  <div class="d-flex justify-content-center">
+                    <img src="assets/img/infra/embroidery.jpg" class="img-fluid" alt="TODO">
+                  </div>
+                  <p>
+                    TODO
+                  </p>
+                </div>
+              </li>
+              <hr> -->
 
             </ul>
           </div>
@@ -310,27 +324,35 @@
         <div class="row" data-aos="zoom-in">
 
           <div class="col-lg-4 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/partners/partners-1.svg" class="img-fluid" alt="">
+            <img src="assets/img/partners/partners-1.svg" class="img-fluid" alt="True Religion">
           </div>
 
           <div class="col-lg-4 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/partners/partners-2.svg" class="img-fluid" alt="">
+            <img src="assets/img/partners/partners-2.svg" class="img-fluid" alt="Nautica">
           </div>
 
           <div class="col-lg-4 col-md-3 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/partners/partners-3.svg" class="img-fluid" alt="">
+            <img src="assets/img/partners/partners-3.svg" class="img-fluid" alt="Beverly Hills Polo Club">
           </div>
 
           <div class="col-lg-4 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/partners/partners-4.svg" class="img-fluid" alt="">
+            <img src="assets/img/partners/partners-4.svg" class="img-fluid" alt="OVS">
           </div>
 
           <div class="col-lg-4 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/partners/partners-5.svg" class="img-fluid" alt="">
+            <img src="assets/img/partners/partners-5.svg" class="img-fluid" alt="Chaps">
           </div>
 
           <div class="col-lg-4 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/partners/partners-6.svg" class="img-fluid" alt="">
+            <img src="assets/img/partners/partners-6.svg" class="img-fluid" alt="next">
+          </div>
+
+          <div class="col-lg-6 col-md-6 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/partners/partners-7.svg" class="img-fluid" alt="Original Marines">
+          </div>
+
+          <div class="col-lg-6 col-md-6 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/partners/partners-8.svg" class="img-fluid" alt="Mayoral">
           </div>
 
         </div>
@@ -396,9 +418,8 @@
               <hr>
 
               <li>
-                <a data-bs-toggle="collapse" data-bs-target="#accordion-list-9" class="collapsed"> EMPOWERING
-                  COMMUNITIES, ENSURING SUSTAINABILITY <i class="bx bx-plus icon-show"></i><i
-                    class="bx bx-minus icon-close"></i></a>
+                <a data-bs-toggle="collapse" data-bs-target="#accordion-list-9" class="collapsed"> SUSTAINABILITY <i
+                    class="bx bx-plus icon-show"></i><i class="bx bx-minus icon-close"></i></a>
                 <div id="accordion-list-9" class="collapse" data-bs-parent="#accordion-list2">
                   <div class="d-flex justify-content-center">
                     <img src="assets/img/infra/sustainability.jpg" class="img-fluid" alt="Sustainability">
@@ -408,6 +429,29 @@
                     (3000), school & healthcare donations uplift communities. Embracing eco-friendly practices: wind
                     energy, water purification, rainwater harvesting. Committed to employee welfare, strict compliance.
                     A responsible, caring, sustainable partner.
+                  </p><br>
+                  <h4>Wind Energy</h4>
+                  <p>
+                    We always hold the environment as a high priority, we have invested in wind energy as an
+                    environmentally friendly power source situated in the outskirts of Pollachi, where we get
+                    an average wind velocity of 15 to 20 kmph, thereby providing us with ample renewable
+                    energy to supplement our electricity needs.
+                  </p><br>
+
+                  <h4>Water Purification</h4>
+                  <p>
+                    We have constructed our own ETP (Effluent Treatment Plant). This type of waste water
+                    treatment method is particularly designed to purify industrial wastewater for its reuse. This
+                    process recycles up to 90% of the water used, while helping us release safe water back into
+                    the environment.
+                  </p><br>
+
+                  <h4>Rainwater Harvesting</h4>
+                  <p>
+                    Since we are in the southern part of India we get nearly 94.5 cms of rain annually, bu
+                    because of seasonal changes there is great spatial variation. At our facility we have
+                    constructed an abundant rain water harvesting system to catch runoff, which is then
+                    purified and used as groundwater supplement for the factory.
                   </p>
                 </div>
               </li>
