--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Remmy Textile - Elivating Fashion, Enriching Lives!</title>
+  <title>Remmy Textiles - Elivating Fashion, Enriching Lives!</title>
   <meta
     content="Established in 2019, Remmy Textiles is a third-generation family-based company. We are an emerging manufacturer and exporter of knitted garments with an integrated factory producing over 12 million pcs/year. Our core competency lies in understanding our customers' buying preferences and delivering consistent, high-quality products that meet international compliance standards. With a keen eye on the latest fashion trends, we are committed to providing exceptional products that exceed our customers' expectations."
     name="description">
